# ComfyUI-AniDoc

./: README.md  example_workflow.json  install.py  nodes.py  pyproject.toml  requirements.txt
LightGlue/lightglue/: lightglue.py  superpoint.py  utils.py
lineart_extractor/hed/: __init__.py
lineart_extractor/lineart/: __init__.py
lineart_extractor/lineart_anime/: __init__.py
models_diffusers/: controlnet_svd.py  mutual_self_attention.py  transformer_temporal.py  unet_3d_blocks.py  unet_spatio_temporal_condition.py  unet_spatio_temporal_condition_interp.py
models_diffusers/camera/: motion_module.py  pose_adaptor.py
pipelines/: __init__.py
