[project]
name = "comfyui-anidoc"
description = "ComfyUI Custom Nodes for 'AniDoc: Animation Creation Made Easier'. This approach automates line art video colorization using a novel model that aligns color information from references, ensures temporal consistency, and reduces manual effort in animation production."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers==0.24.0", "huggingface_hub==0.25.2", "Pillow", "accelerate", "omegaconf", "opencv-python", "einops", "kornia", "git+https://github.com/XPixelGroup/BasicSR.git"]

[project.urls]
Repository = "https://github.com/LucipherDev/ComfyUI-AniDoc"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lucipherdev"
DisplayName = "ComfyUI-AniDoc"